--- a/graphic-design.html
+++ b/graphic-design.html
@@ -199,7 +199,14 @@
         .next:hover {
             background: #FFB5D5 ;
         }
-
+        
+    #modalIframe:fullscreen {
+        width: 100vw;
+        height: 100vh;
+        border: none;
+        margin: 0;
+        padding: 0;
+    }
 
         @media (max-width: 768px) {
     .modal-content {
